acceptance/tests/fixtures/bases/custom-api-gateway/httproute.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1beta1
kind: HTTPRoute
metadata:
  name: custom-http-route
spec:
  parentRefs:
  - name: custom-gateway
