acceptance/tests/fixtures/bases/custom-api-gateway/meshservice.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: MeshService
metadata:
  name: mesh-service
spec:
  name: static-server
